# cheatcode

./: .dependency-cruiser.cjs  .dockerignore  .editorconfig  .env.example  .env.migrate.example  .gitignore  .mcp.json  .vercelignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Makefile  NOTICE  QUICK_DEPLOY_REFERENCE.md  README.md  SECURITY.md  add_license_headers.py  biome.jsonc  compose.yaml  context.tar  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  future.md  knip.jsonc  lefthook.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  research-log.md  tsconfig.base.json  tsconfig.scripts.json  turbo.json
.claude/: last-session.json
.claude/skills/commit/: SKILL.md
.claude/skills/health/: SKILL.md
.claude/skills/improve/: SKILL.md
.claude/skills/linear/: SKILL.md
.claude/skills/new-skill/: SKILL.md
.cursor/: mcp.json
.gemini/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit-archive.yml  build-snapshot.yml  cloudflare-workers.yml  db-migrate.yml  deploy-workers.yml  docker-build.yml  lint.yml  static-checks.yml
api-worker/: package-lock.json  package.json  wrangler.toml
api-worker/src/: index.ts
apps/agent-worker/: .dev.vars.example  README.md  package.json  tsconfig.json  wrangler.jsonc
apps/gateway-worker/: .dev.vars.example  README.md  package.json  wrangler.jsonc
apps/preview-proxy/: .dev.vars.example  README.md  package.json  wrangler.jsonc
apps/web/: README.md  next.config.ts  open-next.config.ts  package.json  tsconfig.json  vercel.json  wrangler.jsonc
apps/webhooks-worker/: .dev.vars.example  README.md  package.json  wrangler.jsonc
backend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.worker  README_EDIT_FILE_SETUP.md  REGION_PAYMENT_METHODS_GUIDE.md  docker-compose.yml  main.py  projects_threads_api.py  pyproject.toml  run_agent_background.py  sentry.py  test_e2e_sync.py  worker_entrypoint.sh  worker_health.py  worker_service.py
backend/agent/: api.py  base_prompt.py  coding_agent_prompt.py  gemini_prompt.py  mobile_agent_prompt.py  prompt.py  run.py  run_agent.py  schemas.py  utils.py
backend/agent/sample_responses/: 1.txt  1_mobile.txt
backend/agent/tools/: completion_tool.py  component_search_tool.py  custom_mcp_handler.py  dynamic_tool_builder.py  expand_msg_tool.py  mcp_tool_executor.py  mcp_tool_wrapper.py  sb_expose_tool.py  sb_files_tool.py  sb_grep_tool.py  sb_lsp_tool.py  sb_screenshot_tool.py  sb_shell_tool.py  sb_vision_tool.py  web_search_tool.py
backend/agentpress/: context_manager.py  response_processor.py  thread_manager.py  tool.py  tool_registry.py  xml_tool_parser.py
backend/agentpress/utils/: json_helpers.py
backend/api/webhooks/: __init__.py  polar.py
backend/composio_integration/: __init__.py  api.py  client.py  connected_account_service.py  mcp_server_service.py  profile_service.py  secure_mcp_api.py  toolkit_service.py
backend/deployments/: api.py
backend/flags/: api.py  flags.py  setup.py
backend/inngest_functions/: __init__.py  agent_run.py  deployments.py  email.py  finalize_agent_run.py  scheduled.py  webhooks.py
backend/mcp_service/: api.py  client.py  credential_manager.py  secure_api.py
backend/pipedream/: api.py  client.py
backend/sandbox/: api.py  sandbox.py  sandbox_pool.py  tool_base.py  volumes.py
backend/sandbox/docker/: Dockerfile.cheatcode-mobile  Dockerfile.cheatcode-one
backend/services/: api_key_resolver.py  billing.py  dodopayments.py  email.py  email_api.py  inngest_client.py  langfuse.py  llm.py  openrouter_models.py  openrouter_pricing.py  polar_service.py  redis.py  structured_llm.py  supabase.py  token_billing.py  user_openrouter_keys.py  vercel_deploy.py
backend/supabase/: config.toml  email-template.html
backend/supabase/migrations/: 00000000000000_baseline.sql
backend/utils/: auth_utils.py  concurrency_monitor.py  config.py  constants.py  dev_server_manager.py  encryption.py  errors.py  file_utils.py  files_utils.py  health_check.py  logger.py  models.py  payment_methods.py  qr_extractor.py  rate_limit.py  retry.py
docs/: DEPLOYMENT_GUIDE.md  DEV_SERVER_RACE_CONDITIONS_FIXED.md  RACE_CONDITIONS_FIXED.md
documentation/: API.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  knip.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: manifest.json  robots.txt
frontend/src/: proxy.ts
preview-worker/: package-lock.json  package.json  wrangler.toml
preview-worker/src/: index.ts
scripts/: archive-audit-log.ts  audit-archive-options.ts  audit-archive-storage.ts  audit-operation-budget.ts  bounded-command.ts  build-skills.ts  clean-docker.ts  cli-options.ts  database-operation-safety.ts  deadline-aware-pg-client.ts  deploy-cloudflare.ts  deploy-phased.ts  dev-worker-config.ts  dev.ts  jsonc.ts  migrate.ts  migration-drizzle.ts  migration-env.ts  operation-deadline.ts  release-operation-budget.ts  require-production-approval.ts  set-hyperdrive-id.ts  setup.sh  sync-blaxel-local-token.ts  sync-secrets.ts  sync-worker-secrets.ts
skills/browser-use/: SKILL.md
skills/canvas-design/: SKILL.md
skills/competitor-brief/: SKILL.md
skills/connected-apps/: SKILL.md
skills/csv-analyst/: SKILL.md
skills/deep-research/: SKILL.md
skills/docx/: SKILL.md
skills/file-reading/: SKILL.md
skills/frontend-design/: SKILL.md
skills/generate-media/: SKILL.md
skills/landing-page/: SKILL.md
skills/manage-skills/: SKILL.md  _shared.ts  list-accounts.ts  list.ts  switch.ts
skills/mobile-app/: SKILL.md
skills/pdf/: SKILL.md
skills/pdf-reading/: SKILL.md
skills/pitch-deck/: SKILL.md
skills/pptx/: SKILL.md
skills/product-self-knowledge/: SKILL.md
skills/skill-authoring/: SKILL.md  create.ts
skills/slide-from-prd/: SKILL.md
skills/social-post-pack/: SKILL.md
skills/webapp-testing/: SKILL.md
skills/xlsx/: SKILL.md
supabase/: config.toml
(+909 files in other folders)
