[project]
name = "cheatcode"
version = "1.0"
description = "AI Coding Agent for Building Mobile Apps and Websites"
authors = [{ name = "Jigyansu Rout", email = "jigyanshu15@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache-2.0 License",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.0.1",
  "litellm==1.80.7",
  "click==8.1.7",
  "requests==2.32.3",
  "packaging==24.1",
  "setuptools==75.3.0",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "fastapi==0.123.7",
  "uvicorn==0.38.0",
  "python-multipart==0.0.20",
  "redis>=7.1.0",
  "aiohttp==3.13.2",
  "supabase>=2.25.0",
  "pyjwt==2.10.1",
  "certifi==2024.2.2",
  "daytona>=0.121.0",
  "openai==2.8.1",
  "tavily-python==0.7.13",
  "Pillow>=10.4.0",
  "mcp==1.23.1",
  "httpx>=0.28.1",
  "mailtrap==2.3.0",
  "sentry-sdk[fastapi]==2.47.0",
  "gunicorn>=23.0.0",
  "cryptography>=41.0.0",
  "structlog==25.5.0",
  "google-genai>=1.53.0",
  "numpy>=1.24.0",
  "dramatiq==2.0.0",
  "langfuse==3.10.5",
  "polar-sdk>=0.28.0",
  "clerk-backend-api==4.1.2",
  "composio>=0.9.4",
  "email-validator>=2.0.0",
]

[project.urls]
homepage = "https://www.trycheatcode.com/"

[tool.uv]
package = false

[tool.uv.sources]
